infrastructure to support gosuai and steam
isolate steamid3, convert between steamid3 and steamid64 (partially)

--- a/popup.html
+++ b/popup.html
@@ -46,6 +46,26 @@
 					<button id="dotamax_newtab" value='dx'><img src="new_tab.png" style="height:16px;width:16px"></button>
 				</td>
 			</tr>
+			<tr>
+				<td>
+					<img src="steam.png" 	style="height:16px;width:16px">
+				</td><td>
+					<button id="steam_switch" value='sm'><img src="switch.png" style="height:16px;width:16px"></button>
+				</td>
+				<td>
+					<button id="steam_newtab" value='sm'><img src="new_tab.png" style="height:16px;width:16px"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<img src="gosuai.png" 	style="height:16px;width:16px">
+				</td><td>
+					<button id="gosuai_switch" value='ga'><img src="switch.png" style="height:16px;width:16px"></button>
+				</td>
+				<td>
+					<button id="gosuai_newtab" value='ga'><img src="new_tab.png" style="height:16px;width:16px"></button>
+				</td>
+			</tr>
 		</table>
 	</body>
 	<script src="popup.js"></script>
