cleaned up code files and organization of images

--- a/popup.html
+++ b/popup.html
@@ -5,70 +5,72 @@
 		<table>
 			<tr>
 				<td>
-					<img src="dotabuff.png" alt="dotabuff" style="height:16px;width:16px">
+					<img src="images/dotabuff.png" alt="dotabuff" style="height:16px;width:16px">
 				</td>
 				<td>
-					<button id="dotabuff_switch" value='db'><img src="switch.png" style="height:16px;width:16px"></button>
+					<button id="dotabuff_switch" value='db'><img src="images/switch.png" style="height:16px;width:16px"></button>
 				</td>
 				<td>
-					<button id="dotabuff_newtab" alt="new tab" value = 'db'><img src="new_tab.png" style="height:16px;width:16px"></button>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<img src="opendota.jpg" style="height:16px;width:16px">
-				</td>
-				<td>
-					<button id="opendota_switch" value='od'><img src="switch.png" style="height:16px;width:16px"></button>
-				</td>
-				<td>
-					<button id="opendota_newtab" value='od'><img src="new_tab.png" style="height:16px;width:16px"></button>
+					<button id="dotabuff_newtab" alt="new tab" value = 'db'><img src="images/new_tab.png" style="height:16px;width:16px"></button>
 				</td>
 			</tr>
 			<tr>
 				<td>
-					<img src="stratz.jpg" 	style="height:16px;width:16px">
+					<img src="images/opendota.jpg" style="height:16px;width:16px">
 				</td>
 				<td>
-					<button id="stratz_switch" value='sz'><img src="switch.png" style="height:16px;width:16px"></button>
+					<button id="opendota_switch" value='od'><img src="images/switch.png" style="height:16px;width:16px"></button>
 				</td>
 				<td>
-					<button id="stratz_newtab" value='sz'><img src="new_tab.png" style="height:16px;width:16px"></button>
+					<button id="opendota_newtab" value='od'><img src="images/new_tab.png" style="height:16px;width:16px"></button>
 				</td>
 			</tr>
 			<tr>
 				<td>
-					<img src="dotamax.jpg" 	style="height:16px;width:16px">
+					<img src="images/stratz.jpg" 	style="height:16px;width:16px">
+				</td>
+				<td>
+					<button id="stratz_switch" value='sz'><img src="images/switch.png" style="height:16px;width:16px"></button>
+				</td>
+				<td>
+					<button id="stratz_newtab" value='sz'><img src="images/new_tab.png" style="height:16px;width:16px"></button>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<img src="images/dotamax.jpg" 	style="height:16px;width:16px">
 				</td><td>
-					<button id="dotamax_switch" value='dx'><img src="switch.png" style="height:16px;width:16px"></button>
+					<button id="dotamax_switch" value='dx'><img src="images/switch.png" style="height:16px;width:16px"></button>
 				</td>
 				<td>
-					<button id="dotamax_newtab" value='dx'><img src="new_tab.png" style="height:16px;width:16px"></button>
+					<button id="dotamax_newtab" value='dx'><img src="images/new_tab.png" style="height:16px;width:16px"></button>
 				</td>
 			</tr>
 			<tr>
 				<td>
-					<img src="steam.png" 	style="height:16px;width:16px">
+					<img src="images/steam.png" 	style="height:16px;width:16px">
 				</td><td>
-					<button id="steam_switch" value='sm'><img src="switch.png" style="height:16px;width:16px"></button>
+					<button id="steam_switch" value='sm'><img src="images/switch.png" style="height:16px;width:16px"></button>
 				</td>
 				<td>
-					<button id="steam_newtab" value='sm'><img src="new_tab.png" style="height:16px;width:16px"></button>
+					<button id="steam_newtab" value='sm'><img src="images/new_tab.png" style="height:16px;width:16px"></button>
 				</td>
 			</tr>
 			<!--
 			<tr>
 				<td>
-					<img src="gosuai.png" 	style="height:16px;width:16px">
+					<img src="images/gosuai.png" 	style="height:16px;width:16px">
 				</td><td>
-					<button id="gosuai_switch" value='ga'><img src="switch.png" style="height:16px;width:16px"></button>
+					<button id="gosuai_switch" value='ga'><img src="images/switch.png" style="height:16px;width:16px"></button>
 				</td>
 				<td>
-					<button id="gosuai_newtab" value='ga'><img src="new_tab.png" style="height:16px;width:16px"></button>
+					<button id="gosuai_newtab" value='ga'><img src="images/new_tab.png" style="height:16px;width:16px"></button>
 				</td>
 			</tr>-->
 		</table>
 	</body>
 	<script src="jquery-3.4.1.min.js"></script>
 	<script src="popup.js"></script>
+	<script src="player_pages.js"></script>
+	<script src="match_pages.js"></script>
 </html>
