started on leagues/esports pages

--- a/popup.html
+++ b/popup.html
@@ -83,4 +83,5 @@
 	<script src="popup.js"></script>
 	<script src="player_pages.js"></script>
 	<script src="match_pages.js"></script>
+	<script src="esports_pages.js"></script>
 </html>
