Removed minified jquery and substituted google's ajax library

--- a/popup.html
+++ b/popup.html
@@ -79,7 +79,7 @@
 			</tr>-->
 		</table>
 	</body>
-	<script src="jquery-3.4.1.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="popup.js"></script>
 	<script src="player_pages.js"></script>
 	<script src="match_pages.js"></script>
